Before fixing triangle